<resources>
    <string name="app_name">Planee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">User</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="darkMod">Dark Mode</string>
    <string name="PlusDesc">Add an event</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="Details">More Details</string>
    <string name="NameEvent">Name of the Event</string>
    <string name="DateOfTheEvent">Date of the Event</string>
    <string name="PickDate">Pick a Date</string>
    <string name="Task">Task</string>
    <string name="addButton">Add the Event</string>
    <string name="NewTask">New Task</string>
    <string name="TaskName">Task name</string>
    <string name="TaskStore">Store</string>
    <string name="TaskUrl">Store URL</string>
    <string name="add">Add</string>
    <string name="deleteTitle">Delete an event</string>
    <string name="deleteMessage">Do you want to Delete it?</string>
    <string name="positif">Yes</string>
    <string name="negative">No</string>
    <string name="cancel">Canceled</string>
    <string name="deleteOK">"Delete "</string>
    <string name="MissNameDate">Enter the name, the date and the time of the event</string>
    <string name="QuitTitle">Quit</string>
    <string name="QuitMessage">Do you want to quit the app?</string>
    <string name="TaskComplete">Task complete</string>
    <string name="NoTask">No Task</string>
    <string name="UpdateEvent">Update</string>
    <string name="NoEvents">No Events</string>
</resources>
