<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddFragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/AddLayout"
            android:background="@drawable/add_frag_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            tools:context=".ui.add.addFragment">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/NomEventTextView"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/NomEvent"
                    android:text="@string/NameEvent" />

                <EditText
                    android:id="@+id/NomEvent"
                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:backgroundTint="@color/white"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/DateEvent"

                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/DateOfTheEvent" />

                <TextView
                    android:id="@+id/DatePick"

                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/PickDate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"

                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:layout_height="wrap_content"
                    android:text="Heure du début de l'évènement" />

                <EditText
                    android:id="@+id/TimeHeure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/white"
                    android:ems="2"
                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/h"

                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="H" />

                <EditText
                    android:id="@+id/TimeMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="@color/white"
                    android:ems="2"
                    android:padding="5dp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="5"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Taches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

            </LinearLayout>


            <Button
                android:id="@+id/NewTache"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_style"
                android:text="@string/NewTask" />

            <Button
                android:id="@+id/addEvent"
                android:layout_width="132dp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/addButton" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>